tshark doesn't save all dependent frames when using a read filter (-R).
This issue was migrated from bug 8223 in our old bug tracker.
Original bug information:
Reporter: celso
Status: RESOLVED FIXED
Product: Wireshark
Component: TShark
OS: All
Platform: All
Version: Git
Attachments:
tshark_dfilter.patch: Patch to add a new display filter option
testcapture.zip: Sample capture
testcapture.pcapng: Extracted sample capture.
See also:
Issue #3315 (closed)
Issue #8316 (closed)
Issue #8529 (closed)