frame_data_sequence.h
@@ -47,6 +47,9 @@ extern frame_data *frame_data_sequence_find(frame_data_sequence *fds,
  */
 extern void free_frame_data_sequence(frame_data_sequence *fds);
 
+extern void find_and_mark_frame_depended_upon(gpointer data, gpointer user_data);
+
+
 #ifdef __cplusplus
 }
 #endif /* __cplusplus */
